--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -180,12 +180,7 @@
 <main class="main">
   <div class="content">
 
-    <app-animal-page>
-      <div **ngFor="let animal of animals">
-        <app-animal-item [animal]="animal">
-        </app-animal-item>
-      </div>
-    </app-animal-page>
+    <app-animal-page></app-animal-page>
 
     <div class="left-side">
       <svg
